# c2c_gpx

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODO.md  pre-commit-ruff.toml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: run-pytest.yml
src/: main.py
src/c2c_gpx/: main.py
src/c2c_gpx/c2c_markdown/: emojis.py
tests/: __init__.py  test_main.py
