[project]
name = "c2c_gpx"
version = "0.0.2"
description = "tool for exporting camptocamp searches into gpx files"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["dependencies"]
requires-python = ">=3.10"

[project.scripts]
c2c_gpx = "c2c_gpx.main:main"

[project.urls]
Homepage = "https://github.com/UlysseV/c2c_gpx"
Repository = "https://github.com/UlysseV/c2c_gpx.git"
Issues = "https://github.com/UlysseV/c2c_gpx/issues"

[build-system]
requires = ["hatchling>=1.26", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/c2c_gpx"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    # Line too long
    # "E501",
    # Module level import not at top of file
    "E402",
    # Use ternary operator
    "SIM108",
    # Ambiguous variable name
    "E741",
    # Do not perform function call in argument defaults
    "B008",
]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "known-third-party", "first-party", "third-party", "local-folder"]

# [tool.ruff.lint.isort.sections]
# known-third-party = []

[tool.mypy]
strict = true
warn_unused_ignores = true
